--- a/plugins/cisco_umbrella_destinations/requirements.txt
+++ b/plugins/cisco_umbrella_destinations/requirements.txt
@@ -2,3 +2,5 @@
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 parameterized==0.8.1
+oauthlib==3.2.2
+requests-oauthlib==1.3.1
