Cisco Umbrella Reporting - 180 - Updated plugin to use API v2

--- a/plugins/cisco_umbrella_reporting/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_reporting/plugin.spec.yaml
@@ -3,13 +3,14 @@ extension: plugin
 products: [insightconnect]
 name: cisco_umbrella_reporting
 title: Cisco Umbrella Reporting
-version: 1.0.1
+version: 2.0.0
 description: This plugin utilizes Cisco Umbrella to get the most complete view of the relationships
   and evolution of Internet domains, IP addresses, and autonomous systems to pinpoint
   attackers infrastructures and predict future threats
 vendor: rapid7
 support: rapid7
 status: []
+supported_versions: ["Cisco Umbrella Reporting API v2"]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/cisco_umbrella_reporting
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -35,19 +36,35 @@ connection:
     type: credential_secret_key
     required: true
     example: 9de5069c5afe602b2ea0a04b66beb2c0
-  organization_id:
-    title: Organization ID
-    description: ID of your Cisco Umbrella organization
-    type: string
-    required: true
-    example: 2961483
 types:
-  record:
-    originid:
-      title: Origin ID
-      description: Numerical identifier for the identity making the request
+  identity:
+    id:
+      title: ID
+      description: The identifier of an identity
       type: integer
       required: false
+    label:
+      title: Label
+      description: The label of an identity
+      type: string
+      required: false
+    deleted:
+      title: Deleted
+      description: A true/false flag indicating whether or not the identity is deleted
+      type: boolean
+      required: false
+  threat:
+    label:
+      title: Label
+      description: The threat label
+      type: string
+      required: false
+    type:
+      title: Type
+      description: Type of threat
+      type: string
+      required: false
+  record:
     internalIp:
       title: Internal IP
       description: Internal IP address of the identity making the request
@@ -58,9 +75,24 @@ types:
       description: External IP address of the identity making the request
       type: string
       required: false
-    originLabel:
-      title: Origin Label
-      description: Human-readable name for the identity, matching the one seen in the dashboard
+    datetime:
+      title: Datetime
+      description: UTC Datetime at which the event occurred, represented in ISO 8601 format
+      type: date
+      required: false
+    timestamp:
+      title: Timestamp
+      description: The unix UTC timestamp in milliseconds
+      type: integer
+      required: false
+    queryType:
+      title: Query Type
+      description: The type of DNS request that was made
+      type: string
+      required: false
+    verdict:
+      title: Verdict
+      description: The entry verdict
       type: string
       required: false
     categories:
@@ -68,29 +100,34 @@ types:
       description: Which categories, if any, the destination for which this request was made falls into
       type: "[]string"
       required: false
-    originType:
-      title: Origin Type
-      description: Identity type (such as network, roaming computer, AD User, etc)
+    domain:
+      title: Domain
+      description: Domain to which this request was made
       type: string
       required: false
-    actionTaken:
-      title: Action Taken
-      description: Either Blocked or Allowed
-      type: string
+    identities:
+      title: Identities
+      description: An array of identities for entry
+      type: "[]identity"
       required: false
-    datetime:
-      title: Datetime
-      description: Datetime at which the event occurred, in UTC
-      type: string
+    threats:
+      title: Threats
+      description: An array of threats for entry
+      type: "[]string"
       required: false
-    destination:
-      title: Destination
-      description: Destination to which this request was made
-      type: string
+    allApplications:
+      title: All Applications
+      description: An array of all applications for entry
+      type: "[]string"
       required: false
-    tags:
-      title: Tags
-      description: Which tags, if any, the destination for which this request was made falls into
+    allowedApplications:
+      title: Allowed Applications
+      description: An array of allowed applications for entry
+      type: "[]string"
+      required: false
+    blockedApplications:
+      title: Blocked Applications
+      description: An array of blocked applications for entry
       type: "[]string"
       required: false
 actions:
@@ -104,6 +141,49 @@ actions:
         type: string
         required: false
         example: example.com
+      limit:
+        title: Limit
+        description: A timestamp or relative time string (for example, '-1days', '-31days') that filters for data appearing after this time, described in ISO 8601 format, where the maximum value is '-31days'. To search for all records, set the limit to 0
+        type: integer
+        required: true
+        example: 100
+        default: 0
+      from:
+        title: From
+        description: A timestamp or relative time string (for example, '-1days', '-31days') that filters for data appearing after this time, described in ISO 8601 format, where the maximum value is '-31days'
+        type: string
+        required: true
+        example: -1days
+        default: -1days
+      order:
+        title: Order
+        description: Describes how the results obtained should be ordered. Defaults to descending, even if it's empty
+        enum:
+          - ""
+          - Ascending
+          - Descending
+        type: string
+        required: false
+        example: Descending
+        default: Descending
+      verdict:
+        title: Verdict
+        description: The verdict value for results to be filtered on, where possible values are (Allowed, Blocked, Proxied)
+        type: string
+        required: false
+        example: allowed,blocked
+      threats:
+        title: Threats
+        description: The name of the threat or comma-delimited list of threat names
+        type: string
+        required: false
+        example: Example,OtherExample
+      threatTypes:
+        title: Threat Types
+        description: The type of the threat or comma-delimited list of threat types
+        type: string
+        required: false
+        example: Malware,Ransomware
     output:
       domain_visits:
         title: Domain Visits
