Started work testing new_incident, ran black and added to help.md

--- a/plugins/ivanti_service_manager/plugin.spec.yaml
+++ b/plugins/ivanti_service_manager/plugin.spec.yaml
@@ -1743,7 +1743,7 @@ connection:
 
 triggers:
   new_incident:
-    title: New incident
+    title: New Incident
     description: Check for new incident
     input:
       frequency:
